--- a/css/page-specific/experience.css
+++ b/css/page-specific/experience.css
@@ -8,7 +8,6 @@ main h1, main h2 {
     text-align: center;
 }
 ul {
-    margin-bottom: 2.25rem;
     margin-top: 0rem;
     padding-left: 0px;
     max-width: 1200px;
